# SimpleGraphics

./: .gitignore  CMakeLists.txt  README.md
assets/: vertex.glsl
src/: main.cpp
src/frontear/: window.cpp  window.hpp
src/graphics/: array.cpp  array.hpp  window.cpp  window.hpp
